# built

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
api/: app.db  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
api/src/models/: __init__.py  database.py  response.py
api/src/routes/: __init__.py  activity.py  auth.py  materials.py  project.py  task.py  user.py
api/src/utils/: __init__.py  auth.py  common.py  config.py  db_create.py  errors.py  helper.py
api/tests/: test_activity.py  test_database.py  test_errors.py  test_main.py  test_materials.py  test_projects.py  test_tasks.py  test_user.py
frontend/: package.json  pnpm-lock.yaml  prettier.config.js
