[project]
name = "built-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "sqlmodel>=0.0.27",
    "typing>=3.10.0.0",
    "uuid>=1.30",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
extraPaths = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.isort]
profile = "black"