[project]
name = "built-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "sqlmodel>=0.0.27",
    "typing>=3.10.0.0",
    "uuid>=1.30",
]

[tool.basedpyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
extraPaths = ["."]

[tool.pyright]
exclude = [
    "tests",
    "**/__pycache__",
    ".venv",
    "venv"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

